--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.1.2",
     "@angular/forms": "~7.2.0",
     "@angular/material": "^7.3.2",
     "@angular/platform-browser": "~7.2.0",
@@ -23,6 +24,7 @@
     "@angular/router": "~7.2.0",
     "angular-google-charts": "^0.1.3",
     "core-js": "^2.5.4",
+    "firebase": "^5.9.2",
     "gsap": "^2.1.2",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
